added play again button

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap" rel="stylesheet">    </head>
     <body onload= "menu()">
         <h1>Vamp Blasters</h1>
-        <h6>USE SPACE TO SHOOT, ARROWS TO MOVE</h6>
-        <canvas id="gc" width="650px" height="350px"></canvas>
+        <h4>INSTRUCTIONS:</h4>
+        <h5>Defend yourself by shooting garlic, and avoid getting hit by the blood!<br>Use space to shoot, arrows to move.</h5>
+        <canvas id="gc" width="650px" height="400px"></canvas>
+        <br>
     </body>
 </html>
